[package]
name = "arduino_serial_io_rust"
version = "0.1.0"
authors = ["unchosenundead"]
edition = "2024"
license = "MIT OR Apache-2.0"

[[bin]]
name = "arduino_serial_io_rust"
test = false
bench = false

[dependencies]
panic-halt = "1.0.0"
ufmt = "0.2.0"
nb = "1.1.0"
embedded-hal = {version = "1.0"}
embedded-io = "0.6.1"
embedded-hal-nb = "1.0"
[dependencies.arduino-hal]
git = "https://github.com/rahix/avr-hal"
rev = "fafaf587a32a4500239fd073f89d1b9c36b48092"
features = ["arduino-uno"]

# Configure the build for minimal size - AVRs have very little program memory
[profile.dev]
panic = "abort"
lto = true
opt-level = "s"

[profile.release]
panic = "abort"
codegen-units = 1
debug = true
lto = true
opt-level = "s"
